--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.8",
+    "@studio-freight/lenis": "^1.0.27",
+    "@types/three": "^0.157.2",
+    "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
+    "iconsax-react": "^0.0.8",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
