--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
+    "@splinetool/react-spline": "^2.2.6",
     "@studio-freight/lenis": "^1.0.27",
+    "@types/dat.gui": "^0.7.11",
     "@types/three": "^0.157.2",
     "autoprefixer": "^10.4.16",
+    "dat.gui": "^0.7.9",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "iconsax-react": "^0.0.8",
@@ -21,6 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "split-type": "^0.3.4",
+    "swiper": "^11.0.3",
     "tailwindcss": "^3.3.5",
     "three": "^0.158.0"
   },
